# sui-id

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  PUBLISHING.md  README.md  ROADMAP.md  TERMS_OF_USE.md  sui-id.example.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
crates/sui-id/: Cargo.toml
crates/sui-id-bin/: Cargo.toml  README.md
crates/sui-id-bin/src/: assets.rs  config.rs  handlers.rs  lib.rs  main.rs  router.rs  state.rs
crates/sui-id-bin/src/handlers/: admin.rs  index.rs  oidc.rs  setup.rs
crates/sui-id-bin/tests/: e2e.rs
crates/sui-id-core/: Cargo.toml  README.md
crates/sui-id-core/src/: actor.rs  admin.rs  audit_guard.rs  authorize.rs  authz.rs  cache.rs  dashboard.rs  discovery.rs  errors.rs  events.rs  forgot_password.rs  hibp.rs  i18n.rs  jwks.rs  jwt.rs  key_rotation.rs  lib.rs  mail.rs  me_security.rs  mfa.rs  oauth_token.rs  password.rs  pending_change.rs  security.rs  session.rs  setup.rs  step_up.rs  time.rs  tokens.rs  totp.rs  webauthn.rs
crates/sui-id-core/src/admin/: clients.rs  signing_keys.rs  users.rs
crates/sui-id-core/src/authz/: tests.rs
crates/sui-id-core/src/jwt/: tests.rs
crates/sui-id-core/src/mail/: outbox.rs
crates/sui-id-core/src/password/: tests.rs
crates/sui-id-core/src/tokens/: tests.rs
crates/sui-id-i18n/: Cargo.toml
crates/sui-id-i18n/src/: en.rs  formatters.rs  ja.rs  lib.rs  locale.rs  strings.rs  tests.rs  zh.rs
crates/sui-id-i18n/src/locale/: en.rs  ja.rs  zh_hans.rs  zh_hant.rs
crates/sui-id-shared/: Cargo.toml  README.md
crates/sui-id-shared/src/: api.rs  auth_method.rs  errors.rs  ids.rs  lib.rs  secrets.rs
crates/sui-id-shared/src/errors/: tests.rs
crates/sui-id-shared/src/ids/: tests.rs
crates/sui-id-store/: Cargo.toml  README.md
crates/sui-id-store/proptest-regressions/tests_state_machine/: auth_codes.txt
crates/sui-id-store/src/: backend.rs  crypto.rs  db.rs  errors.rs  ldap_source.rs  lib.rs  metrics.rs  migrations.rs  models.rs  repos.rs  tests_rfc021.rs  user_source.rs
crates/sui-id-store/src/crypto/: tests.rs
crates/sui-id-store/src/migrations/: 0001_initial.sql  0005_revoked_access_tokens.sql  0006_session_auth_methods.sql  0007_user_lockout.sql  0008_refresh_token_family.sql  0009_audit_hash_chain.sql  0012_users_email.sql  0017_hibp_mode.sql  0018_session_limits.sql  0029_user_consent_last_used.sql  0031_auth_code_index.sql  0032_pending_settings_change.sql  0033_server_settings_metrics_token.sql  0034_users_source.sql  0035_clients_app_identity.sql  0036_scope_definition_and_reg_token.sql  0037_federation_provider.sql  0038_federation_link.sql
crates/sui-id-store/src/repos/: audit.rs  auth_codes.rs  client_registration_token.rs  clients.rs  credentials.rs  email_outbox.rs  federation_link.rs  federation_provider.rs  login_pending_mfa.rs  password_reset_tokens.rs  pending_settings_change.rs  refresh_tokens.rs  revoked_access_tokens.rs  scope_definition.rs  server_settings.rs  sessions.rs  signing_keys.rs  smtp_config.rs  state.rs  user_consent.rs  user_totp.rs  user_webauthn_credentials.rs  users.rs  webauthn_pending.rs
crates/sui-id-store/src/repos/auth_codes/: tests.rs
crates/sui-id-store/src/repos/pending_settings_change/: tests.rs
crates/sui-id-store/src/repos/refresh_tokens/: tests.rs
crates/sui-id-store/src/tests_state_machine/: auth_codes.rs  mod.rs  refresh_tokens.rs  sessions.rs
crates/sui-id-web/: Cargo.toml  README.md
crates/sui-id-web/src/: components.rs  layout.rs  lib.rs  pages.rs  tokens.rs
crates/sui-id-web/src/components/: badges.rs  banners.rs  buttons.rs  cards.rs  chrome.rs  confirm.rs  forms.rs  setup.rs  tables.rs  tabs.rs  utilities.rs
crates/sui-id-web/src/pages/: audit.rs  auth.rs  clients.rs  common.rs  confirm.rs  dashboard.rs  error.rs  me_security.rs  oidc.rs  settings.rs  setup.rs  signing_keys.rs  users.rs
crates/sui-id-web/src/pages/me_security/: apps.rs  language.rs  mfa.rs  overview.rs  passkey.rs  security.rs  sessions.rs
crates/sui-id-web/src/pages/settings/: authentication.rs  basic.rs  email.rs  logs.rs  other.rs  security.rs
crates/sui-id-web/src/tokens/: tests.rs
crates/sui-id/src/: assets.rs  backup.rs  cli.rs  config.rs  cors.rs  csrf.rs  dev_mode.rs  errors.rs  gc.rs  handlers.rs  ipnet.rs  keyring.rs  lib.rs  main.rs  ratelimit.rs  request_id.rs  router.rs  security_headers.rs  startup.rs  state.rs
crates/sui-id/src/backup/: ops.rs  tar.rs  tests.rs
crates/sui-id/src/handlers/: admin.rs  dynamic_register.rs  federation.rs  forgot_password.rs  index.rs  me_security.rs  metrics.rs  oauth_token.rs  oidc.rs  settings.rs  setup.rs  step_up.rs
crates/sui-id/src/handlers/admin/: audit.rs  auth.rs  clients.rs  dashboard.rs  forms.rs  signing_keys.rs  users.rs  webauthn.rs
crates/sui-id/src/handlers/me_security/: apps.rs  forms.rs  language.rs  mfa.rs  overview.rs  passkey.rs  password.rs  sessions.rs
crates/sui-id/static/: copy.js  logout-csrf.js  theme-init.js
crates/sui-id/tests/: e2e.rs
crates/sui-id/tests/e2e/: acr_amr.rs  auth_flow_integrity.rs  backup.rs  clients_edit.rs  common.rs  csrf.rs  dashboard.rs  dev_mode.rs  email_forgot.rs  email_pwd_change.rs  hibp.rs  i18n_auth_flow.rs  i18n_basic.rs  i18n_me_security.rs  i18n_phase2.rs  introspection.rs  key_rotation.rs  lockout.rs  logout_jwks.rs  main.rs  me_security.rs  mfa.rs  oidc_flow.rs  password_change.rs  refresh_theft.rs  request_id.rs  rfc030_033_035.rs  rfc6749_error_format.rs  scope_logout.rs  sec_headers.rs  session_limits.rs  settings.rs  setup_wizard.rs  step_up_totp.rs  step_up_webauthn.rs  user_identity_invariants.rs
docs/: book.toml  deployment.md  development-specification.md  integrators.md  operators.md  security-assurance-audit-v0.63.1.md  threat-model.md
examples/: dev-seed.toml
fuzz/: Cargo.toml  rust-toolchain.toml
fuzz/fuzz_targets/: accept_language.rs  authorize_params.rs  fuzz_target_1.rs  ids_fromstr.rs  jwt_parse.rs  logout_params.rs  pkce_verify.rs
rfcs/: 003-hibp-expansion.md  005-pluggable-user-backends.md  007-multi-tenancy.md  008-third-party-posture.md  009-sql-backends.md  (+4 more)
(+86 files in other folders)
