[package]
name = "sui-id-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Authentication / authorization core (OIDC / OAuth2 + PKCE) for sui-id."

[lints]
workspace = true

[dependencies]
sui-id-shared = { path = "../sui-id-shared" }
sui-id-store = { path = "../sui-id-store" }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

argon2 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
subtle = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
base64ct = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
