[package]
name        = "sui-id-i18n"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "sui-id internationalisation (i18n) — typed string tables for UI text."
readme = "README.md"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
