[package]
name        = "sui-id-i18n"
description = "sui-id internationalisation (i18n) — typed string tables for UI text."
readme      = "README.md"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
homepage.workspace      = true
categories.workspace    = true
keywords.workspace      = true

[dependencies]
chrono                      = { workspace = true }
serde                       = { workspace = true }

[dev-dependencies]
serde_json                  = { workspace = true }

[lints]
workspace   = true
