[package]
name = "sui-id-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Persistence layer (SQLite + field-level encryption) for sui-id, a self-hosted Rust OIDC provider."
readme = "README.md"

[lints]
workspace = true

[dependencies]
sui-id-shared = { version = "0.20.3", path = "../sui-id-shared" }

rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
base64ct = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
