[package]
name = "sui-id-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Server-rendered admin and setup UI (Leptos SSR) for sui-id, a self-hosted Rust OIDC provider."
readme = "README.md"

[lints]
workspace = true

[dependencies]
sui-id-store = { version = "0.76.6", path = "../sui-id-store" }
url = { workspace = true }
sui-id-shared = { version = "0.76.6", path = "../sui-id-shared" }
sui-id-i18n   = { version = "0.76.6", path = "../sui-id-i18n" }

leptos = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
