[package]
name = "sui-id"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Self-hosted, single-binary OpenID Connect provider in Rust. Install with `cargo install sui-id`."
readme = "../../README.md"

# Restrict what gets uploaded to crates.io.
include = [
    "src/**/*",
    "tests/**/*",
    "static/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[[bin]]
name = "sui-id"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
sui-id-shared = { version = "0.4.0", path = "../sui-id-shared" }
sui-id-store  = { version = "0.4.0", path = "../sui-id-store" }
sui-id-core   = { version = "0.4.0", path = "../sui-id-core" }
sui-id-web    = { version = "0.4.0", path = "../sui-id-web" }

tokio = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
time = "0.3"
cookie = "0.18"

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
secrecy = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
base64ct = { workspace = true }
chacha20poly1305 = { workspace = true }
include_dir = { workspace = true }
percent-encoding = { workspace = true }
subtle = { workspace = true }
rusqlite = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
base64ct = { workspace = true }
percent-encoding = { workspace = true }
sui-id-store = { version = "0.4.0", path = "../sui-id-store" }
http = "1"
http-body-util = "0.1"
