[package]
name        = "sui-id"
description = "Self-hosted, single-binary OpenID Connect provider in Rust. Install with `cargo install sui-id`."
readme      = "../../README.md"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
homepage.workspace      = true
categories.workspace    = true
keywords.workspace      = true

# Restrict what gets uploaded to crates.io. `cargo publish` automatically
# resolves `readme = "../../README.md"` and copies the file into the
# package; we do not need to list it here.
include = [
    "src/**/*",
    "tests/**/*",
    "static/**/*",
    "Cargo.toml",
]

[[bin]]
name = "sui-id"
path = "src/main.rs"

# Integration test binary. The single `e2e` binary aggregates every
# themed module under `tests/e2e/<theme>.rs` so they share helpers
# (`tests/e2e/common.rs`) and a single compile.
[[test]]
name = "e2e"
path = "tests/e2e/main.rs"

[lints]
workspace = true

[dependencies]
sui-id-shared               = { workspace = true }
sui-id-i18n                 = { workspace = true }
sui-id-store                = { workspace = true }
sui-id-core                 = { workspace = true }
sui-id-web                  = { workspace = true }

tokio                       = { workspace = true }
axum                        = { workspace = true }
axum-extra                  = { workspace = true }
tower                       = { workspace = true }
tower-http                  = { workspace = true }
hyper                       = { workspace = true }
time                        = { workspace = true }
cookie                      = { workspace = true }

serde                       = { workspace = true }
serde_json                  = { workspace = true }
toml                        = { workspace = true }
thiserror                   = { workspace = true }
anyhow                      = { workspace = true }
tracing                     = { workspace = true }
tracing-subscriber          = { workspace = true }
tracing-appender            = { workspace = true }
chrono                      = { workspace = true }
uuid                        = { workspace = true }
url                         = { workspace = true }
secrecy                     = { workspace = true }
rand                        = { workspace = true }
getrandom                   = { workspace = true }
prometheus                  = { workspace = true }
zeroize                     = { workspace = true }
base64ct                    = { workspace = true }
reqwest                     = { workspace = true }
chacha20poly1305            = { workspace = true }
argon2                      = { workspace = true }
include_dir                 = { workspace = true }
percent-encoding            = { workspace = true }
hmac                        = { workspace = true }
subtle                      = { workspace = true }
qrcode                      = { workspace = true }
webauthn-rs                 = { workspace = true }
rusqlite                    = { workspace = true }
tempfile                    = { workspace = true }
sha2                        = { workspace = true }

[dev-dependencies]
sui-id-store                = { workspace = true }
# Re-pull the core crate as a dev-dep with the `test-support`
# feature so e2e tests can construct `InMemoryHibpClient` /
# `InMemoryMailSender` from `core::test_support`. The library
# build of the same crate (no feature) is unaffected.
sui-id-core                 = { workspace = true }

proptest                    = { workspace = true }
tempfile                    = { workspace = true }

tokio                       = { workspace = true }
tower                       = { workspace = true }
serde_json                  = { workspace = true }
url                         = { workspace = true }

base64ct                    = { workspace = true }
reqwest                     = { workspace = true }
percent-encoding            = { workspace = true }
http                        = { workspace = true }
http-body-util              = { workspace = true }
